[package]
name = "markdown2html-converter"
version = "1.1.11"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/magiclen/markdown2html-converter"
homepage = "https://magiclen.org/markdown2html-converter"
keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
categories = ["command-line-utilities"]
description = "A tool for converting a Markdown file to a single HTML file with built-in CSS and JS."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "resources/*"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = "3.2.23"
concat-with = "0.2"
terminal_size = "0.2"

lazy-static-include = "3.1.1"
html-minifier = "4"
comrak = { version = "0.18", default-features = false }
html-escape = "0.2"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]
