[package]
name = "markdown2html-converter"
version = "1.1.12"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/markdown2html-converter"
homepage = "https://magiclen.org/markdown2html-converter"
keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
categories = ["command-line-utilities"]
description = "A tool for converting a Markdown file to a single HTML file with built-in CSS and JS."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "resources/*"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

lazy-static-include = "3.1.1"
html-minifier = "4"
comrak = { version = "0.19", default-features = false }
html-escape = "0.2"